<resources>
    <string name="app_name">TechnicalTest_BTS</string>
    <string name="text_login">Login</string>
    <string name="text_username">username</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>
    <string name="text_email">Email</string>
    <string name="text_add">Add</string>
    <string name="text_title">Title</string>
</resources>